--- a/catch-of-the-day/public/index.html
+++ b/catch-of-the-day/public/index.html
@@ -13,4 +13,18 @@
       <!-- This is where our React app will go -->
     </div>
   </body>
-</html>
+  
+  <!-- <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyDQ3gKhdZPQJaNXn1Wn4SxeQe0F_09FAlM",
+      authDomain: "catch-of-the-day-4f0f7.firebaseapp.com",
+      databaseURL: "https://catch-of-the-day-4f0f7.firebaseio.com",
+      projectId: "catch-of-the-day-4f0f7",
+      storageBucket: "catch-of-the-day-4f0f7.appspot.com",
+      messagingSenderId: "564970476456"
+    };
+    firebase.initializeApp(config);
+  </script> -->
+  </html>
