--- a/catch-of-the-day/public/index.html
+++ b/catch-of-the-day/public/index.html
@@ -23,7 +23,7 @@
   <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase-messaging.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase-functions.js"></script>
  -->
-  <script>
+ <!--  <script>
     // Initialize Firebase
     var config = {
       apiKey: "AIzaSyDQ3gKhdZPQJaNXn1Wn4SxeQe0F_09FAlM",
@@ -34,5 +34,5 @@
       messagingSenderId: "564970476456"
     };
     firebase.initializeApp(config);
-  </script>
+  </script> -->
   </html>
